--- a/staffapp/templates/addstaff.html
+++ b/staffapp/templates/addstaff.html
@@ -186,13 +186,25 @@
                                 <label for="staff_image" class="block text-lg font-bold leading-6 text-gray-500">
                                     Profile Picture
                                 </label>
-                                <div class="mt-2 flex justify-center rounded-sm border-dashed border-2 border-gray-300 px-6 py-10 md:py-7">
+                                <div
+                                    class="mt-2 flex justify-center rounded-none border-dashed border-2 border-gray-300
+                                           px-6 py-10 md:py-7"
+                                >
                                     <div class="text-center">
                                         <svg class="mx-auto h-16 w-16 text-gray-300" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
                                             <path fill-rule="evenodd" d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z" clip-rule="evenodd" />
                                         </svg>
-                                        <div id="staff_image" class="mt-4 flex text-md leading-6 text-gray-600 place-items-center">
-                                            <label for="staff_image" class="relative cursor-pointer items-center rounded-sm bg-white font-semibold text-indigo-600 focus-within:outline-none focus-within:ring-2 focus-within:ring-indigo-600 focus-within:ring-offset-2 hover:text-indigo-500">
+                                        <div
+                                            id="staff_image"
+                                            class="mt-4 flex text-md leading-6 text-gray-600 place-items-center"
+                                        >
+                                            <label
+                                                for="staff_image"
+                                                class="relative cursor-pointer items-center rounded-none bg-white
+                                                       font-semibold text-indigo-600 focus-within:outline-none
+                                                       focus-within:ring-2 focus-within:ring-indigo-600
+                                                       focus-within:ring-offset-2 hover:text-indigo-500"
+                                            >
                                                 {% render_field form.staff_image class+='cursor-pointer' %}
                                             </label>
                                         </div>
@@ -257,26 +269,6 @@
                                 {% endif %}
                             </div>
 
-                            <!-- First Appointment -->
-                            <div>
-                                <label for="first_appointment" class="block mb-2 text-md font-bold text-gray-500">
-                                    {{ form.first_appointment.label }}
-                                    <span class="ml-1 text-1xl font-medium text-red-600">
-                                        <em>*</em>
-                                    </span>
-                                </label>
-
-                                <div id="first_appointment">
-                                    {% render_field form.first_appointment class+="cursor-pointer text-lg md:text-lg font-bold block w-full p-2 rounded-sm border border-2 border-gray-300 bg-white text-gray-800 focus:outline-none focus:ring-green-900 focus:border-green-900 focus:z-10" %}
-                                </div>
-
-                                {% if form.errors.first_appointment %}
-                                    <span class="text-red-600 font-medium">
-                                        {{ form.errors.first_appointment }}
-                                    </span>
-                                {% endif %}
-                            </div>
-
                             <!-- Department -->
                             <div>
                                 <label for="department" class="block mb-2 text-md font-bold text-gray-500">
@@ -293,6 +285,26 @@
                                 {% if form.errors.department %}
                                     <span class="text-red-600 font-medium">
                                         {{ form.errors.department }}
+                                    </span>
+                                {% endif %}
+                            </div>
+
+                            <!-- First Appointment -->
+                            <div>
+                                <label for="first_appointment" class="block mb-2 text-md font-bold text-gray-500">
+                                    {{ form.first_appointment.label }}
+                                    <span class="ml-1 text-1xl font-medium text-red-600">
+                                        <em>*</em>
+                                    </span>
+                                </label>
+
+                                <div id="first_appointment">
+                                    {% render_field form.first_appointment class+="cursor-pointer text-lg md:text-lg font-bold block w-full p-2 rounded-sm border border-2 border-gray-300 bg-white text-gray-800 focus:outline-none focus:ring-green-900 focus:border-green-900 focus:z-10" %}
+                                </div>
+
+                                {% if form.errors.first_appointment %}
+                                    <span class="text-red-600 font-medium">
+                                        {{ form.errors.first_appointment }}
                                     </span>
                                 {% endif %}
                             </div>
