--- a/staffapp/templates/staffdetails.html
+++ b/staffapp/templates/staffdetails.html
@@ -27,13 +27,23 @@
 
             <!-- Profile Picture -->
             <div class="flex mx-auto w-32 h-32">
-                <img class="w-full h-full mx-auto rounded-full shadow-sm" src="{{ staff.staff_image.url }}">
+                {% if staff.staff_image.url %}
+                    <img class="w-full h-full mx-auto rounded-full shadow-sm" src="{{ staff.staff_image.url }}">
+                    {% else %}
+                        <img class="w-full h-full mx-auto rounded-full shadow-sm" src="{% static 'img/default.png' %}">
+                {% endif %}
             </div>
 
             <!-- Form Title -->
             <div class="text-center mt-8">
                 <h2 class="text-3xl md:text-4xl font-extrabold text-gray-900">
-                    {{ staff.first_name }} {{ staff.middle_name }} {{ staff.last_name }}
+                    {{ staff.first_name }}
+                    {% if staff.middle_name %}
+                        {{ staff.middle_name }}
+                        {% else %}
+                            <span></span>
+                    {% endif %}
+                    {{ staff.last_name }}
                 </h2>
                 <p class="mt-2 font-medium text-xl italic text-blue-500">
                     {{ staff.official_email }}
@@ -41,13 +51,13 @@
             </div>
 
             <!-- DETAILS -->
-            <div class="mt-10 text-xl font-bold underline text-center py-2 px-4 bg-none text-green-900">
+            <div class="mt-8 text-xl font-bold underline text-center bg-none text-green-900">
                 Personal and Official Details
             </div>
 
             <!-- DETAILS -->
             <div>
-                <div class="mt-4 border-t border-gray-100 px-4">
+                <div class="mt-12 border-t border-gray-100 px-4">
                     <dl class="divide-y grid divide-gray-200 md:text-center">
 
                         <!-- Phone number -->
