--- a/staffapp/templates/stafflist.html
+++ b/staffapp/templates/stafflist.html
@@ -13,21 +13,20 @@
     
     <!-- Staff list -->
     <div
-        class="p-8 md:pb-4 mt-8 max-w-3xl mb-6 bg-white rounded-none border
-               mx-auto shadow-md sm:p-8 min-h-full justify-center"
+        class="mt-4 md:mt-8 max-w-3xl mb-8 bg-white rounded-none border pt-8 pb-0
+               mx-auto shadow-md"
     >
-
-        <div class="mx-auto text-center mb-8">
-            <h5 class="text-3xl font-bold leading-none text-gray-900 underline">
+        <div class="mx-auto text-center">
+            <h5 class="mb-6 text-3xl font-bold leading-none text-gray-900 underline">
                 Staff List
             </h5>
         </div>
         
         <!-- Staff list -->
         <div class="flow-root">
-            <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700">
+            <ul role="list" class="divide-y divide-gray-200">
                 {% for staff in stafflist %}
-                    <li class="py-3 sm:py-4">
+                    <li class="p-4 md:p-8 md:py-6 hover:bg-gray-100">
         
                         <!-- Profile -->
                         <div class="flex items-center space-x-4">
@@ -42,7 +41,7 @@
         
                             <!-- Name and Email -->
                             <div class="flex-1 min-w-0">
-                                <p class="text-lg font-medium text-gray-900 truncate dark:text-white">
+                                <p class="text-lg font-semibold text-gray-900 truncate">
                                     {{ staff.first_name }}
                                     {% if staff.middle_name %}
                                         {{ staff.middle_name }}
@@ -61,9 +60,11 @@
                                 <a href="{{ staff.get_absolute_url }}" target="_blank">
                                     <button
                                         type="button"
-                                        class="inline-flex items-center p-4 border border-2 border-green-800 rounded-none
-                                               text-sm font-medium text-white bg-green-800 hover:bg-green-700 focus:outline-none
-                                               hover:border-green-700 focus:ring-4 focus:ring-offset-2 focus:ring-green-700">
+                                        class="inline-flex items-center px-4 py-3 border border-2 border-green-800
+                                               rounded-none text-sm font-medium text-white bg-green-800
+                                               hover:bg-green-700 focus:outline-none hover:border-green-700
+                                               focus:ring-4 focus:ring-offset-2 focus:ring-green-800"
+                                    >
                                         <svg
                                             xmlns="http://www.w3.org/2000/svg"
                                             class="mr-2 h-5 w-5"
