--- a/staffapp/templates/updatestaff.html
+++ b/staffapp/templates/updatestaff.html
@@ -31,13 +31,9 @@
             </div>
 
             <!-- Form Title -->
-            <div>
-                <h2
-                    class="mb-6 text-center text-3xl font-extrabold underline
-                           underline-offset-2 text-gray-900"
-                >
-                    Edit {{ staff.first_name }}'s Profile
-                </h2>
+            <div class="mb-6 text-center text-3xl font-extrabold text-gray-900">
+                <span class="underline underline-offset-2">Update:</span>
+                    {{ staff.first_name }} {{ staff.last_name }}
             </div>
 
             <p class="text-md mt-10 font-medium text-red-600">
@@ -259,26 +255,6 @@
                                 {% endif %}
                             </div>
 
-                            <!-- First Appointment -->
-                            <div>
-                                <label for="first_appointment" class="block mb-2 text-md font-bold text-gray-500">
-                                    {{ form.first_appointment.label }}
-                                    <span class="ml-1 text-1xl font-medium text-red-600">
-                                        <em>*</em>
-                                    </span>
-                                </label>
-
-                                <div id="first_appointment">
-                                    {% render_field form.first_appointment class+="cursor-pointer text-lg md:text-lg font-bold block w-full p-2 rounded-sm border border-2 border-gray-300 bg-white text-gray-800 focus:outline-none focus:ring-green-900 focus:border-green-900 focus:z-10" %}
-                                </div>
-
-                                {% if form.errors.first_appointment %}
-                                    <span class="text-red-600 font-medium">
-                                        {{ form.errors.first_appointment }}
-                                    </span>
-                                {% endif %}
-                            </div>
-
                             <!-- Department -->
                             <div>
                                 <label for="department" class="block mb-2 text-md font-bold text-gray-500">
@@ -295,6 +271,26 @@
                                 {% if form.errors.department %}
                                     <span class="text-red-600 font-medium">
                                         {{ form.errors.department }}
+                                    </span>
+                                {% endif %}
+                            </div>
+
+                            <!-- First Appointment -->
+                            <div>
+                                <label for="first_appointment" class="block mb-2 text-md font-bold text-gray-500">
+                                    {{ form.first_appointment.label }}
+                                    <span class="ml-1 text-1xl font-medium text-red-600">
+                                        <em>*</em>
+                                    </span>
+                                </label>
+
+                                <div id="first_appointment">
+                                    {% render_field form.first_appointment class+="cursor-pointer text-lg md:text-lg font-bold block w-full p-2 rounded-sm border border-2 border-gray-300 bg-white text-gray-800 focus:outline-none focus:ring-green-900 focus:border-green-900 focus:z-10" %}
+                                </div>
+
+                                {% if form.errors.first_appointment %}
+                                    <span class="text-red-600 font-medium">
+                                        {{ form.errors.first_appointment }}
                                     </span>
                                 {% endif %}
                             </div>
@@ -372,8 +368,8 @@
                             type="button"
                             class="group relative w-full flex items-center mx-auto justify-center mt-6 mb-4 p-4
                                    border border-red-700 text-md font-medium rounded-none text-white bg-red-700
-                                  hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-offset-2
-                                  focus:ring-red-500 hover:border-red-600"
+                                   hover:bg-red-600 focus:outline-none focus:ring-4 focus:ring-offset-2
+                                   focus:ring-red-500 hover:border-red-600"
                         >
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
