--- a/templates/base.html
+++ b/templates/base.html
@@ -45,8 +45,8 @@
 						<button
 							onclick="myFunction();"
 							type="button"
-							class="relative inline-flex items-center justify-center rounded-sm p-2
-							       text-gray-600 hover:bg-green-900 hover:text-white focus:outline-none
+							class="relative inline-flex items-center justify-center rounded-none p-2 bg-green-900
+							       hover:bg-green-800 hover:text-white focus:outline-none
 							       focus:ring-2 focus:ring-white"
 							aria-controls="mobile-menu"
 							aria-expanded="false"
@@ -54,32 +54,35 @@
 							<span class="absolute -inset-0.5"></span>
 							<span class="sr-only">Open main menu</span>
 
-						<!-- Icon when menu is closed. Menu open: "hidden", Menu closed: "block" -->
-						<svg
-							class="block h-6 w-6"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke-width="1.5"
-							stroke="currentColor"
-							aria-hidden="true"
-						>
-							<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-						</svg>
+							<!-- Icon when menu is closed. Menu open: "hidden", Menu closed: "block" -->
+							<svg
+								id="hamburger-icon"
+								class="block h-6 w-6 text-white"
+								fill="none"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								aria-hidden="true"
+							>
+								<path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+							</svg>
 
-						<!-- Icon when menu is open. Menu open: "block", Menu closed: "hidden" -->
-						<svg
-							class="hidden h-6 w-6"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke-width="1.5"
-							stroke="currentColor"
-							aria-hidden="true"
-						>
-							<path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-						</svg>
+							<!-- Icon when menu is open. Menu open: "block", Menu closed: "hidden" -->
+							<svg
+								id="x-icon"
+								fill="none"
+								class="hidden w-6 h-6 text-white"
+								viewBox="0 0 24 24"
+								stroke-width="1.5"
+								stroke="currentColor"
+								aria-hidden="true"
+							>
+								<path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+							</svg>
 						</button>
 					</div>
 
+					<!-- Navbar Outer Container -->
 					<div class="flex flex-1 items-center justify-between">
 
 						<!-- Navbar logo -->
@@ -93,7 +96,7 @@
 								<!-- Home -->
 								<a
 								    href="{% url 'index' %}"
-								    class="{% active_link 'index' strict=True css_class='md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
+								    class="{% active_link 'index' strict=True css_class='text-white md:text-white bg-green-900 md:hover:h-20 md:hover:bg-green-900 hover:text-white' %}
 								            flex h-20 items-center hover:h-20 hover:bg-green-900 text-gray-800 hover:text-white
 								            rounded-none p-4 md:px-6 text-lg font-extrabold"
 								    aria-current="page"
@@ -318,14 +321,5 @@
 	<!-- End of footer -->
 
 	<!-- JavaScript to open mobile menu -->
-	<script>
-		function myFunction() {
-			var x = document.querySelector('#mobile-menu');
-			if (x.style.display === "block") {
-				x.style.display = "none";
-			} else {
-				x.style.display = "block";
-			}
-		}
-	</script>
+	<script src="{% static 'js/mobilemenu.js' %}"></script>
 </html>
